[gd_scene load_steps=3 format=3 uid="uid://c2y4k0u2j8hiy"]

[ext_resource type="Script" path="res://menu.gd" id="1_r5won"]
[ext_resource type="LabelSettings" uid="uid://cqci1hpob16xk" path="res://menu.tres" id="2_pb68b"]

[node name="Menu" type="Node2D"]
process_mode = 2
script = ExtResource("1_r5won")

[node name="MenuHeader" type="Label" parent="."]
offset_left = -50.0
offset_top = -70.0
offset_right = 50.0
offset_bottom = -20.0
text = "Pause"
label_settings = ExtResource("2_pb68b")
horizontal_alignment = 1

[node name="Return" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.514
anchor_right = 0.5
anchor_bottom = 0.514
offset_left = -50.0
offset_top = -25.0
offset_right = 50.0
offset_bottom = 10.0
text = "Return"
metadata/_edit_use_anchors_ = true

[node name="Quit" type="Button" parent="."]
offset_left = -50.0
offset_top = 15.0
offset_right = 50.0
offset_bottom = 50.0
text = "Quit"
metadata/_edit_use_anchors_ = true

[node name="QuitConfirm" type="Label" parent="."]
visible = false
offset_left = -55.0
offset_top = -50.0
offset_right = 55.0
text = "Quit?"
label_settings = ExtResource("2_pb68b")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="YesButton" type="Button" parent="."]
visible = false
offset_left = -55.0
offset_right = -5.0
offset_bottom = 31.0
text = "Yes"
metadata/_edit_use_anchors_ = true

[node name="NoButton" type="Button" parent="."]
visible = false
offset_left = 5.0
offset_right = 55.0
offset_bottom = 31.0
text = "No"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="YesButton" to="." method="_on_yes_button_pressed"]
[connection signal="pressed" from="NoButton" to="." method="_on_no_button_pressed"]
